experiments/ISO_EBNF-v1.ebnf
syntax     = { rule | comment } ;

rule       = identifier, "=", expression, ";" ;

expression = term, { "|", term } ;

term       = factor, { ",", factor } ;

factor     = [ integer, "*" ], primary ;

primary    = identifier
           | terminal
           | "(", expression, ")"
           | "[", expression, "]"
           | "{", expression, "}" ;

identifier = letter, { letter | digit } ;

terminal   = '"', character, { character }, '"'
           | "'", character, { character }, "'" ;

character  = letter | digit ;

integer    = digit, { digit } ;

letter     = "A" | "B" | "C" | "D" | "E" | "F" | "G"
           | "H" | "I" | "J" | "K" | "L" | "M" | "N"
           | "O" | "P" | "Q" | "R" | "S" | "T" | "U"
           | "V" | "W" | "X" | "Y" | "Z"
           | "a" | "b" | "c" | "d" | "e" | "f" | "g"
           | "h" | "i" | "j" | "k" | "l" | "m" | "n"
           | "o" | "p" | "q" | "r" | "s" | "t" | "u"
           | "v" | "w" | "x" | "y" | "z" ;

digit      = "0" | "1" | "2" | "3" | "4"
           | "5" | "6" | "7" | "8" | "9" ;

comment    = "(*", { character | space }, "*)" ;

space      = " " | "\t" | "\n" | "\r" ;
